--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,10 +4,18 @@
     <title>My first webpage!</title>
   </head>
   <body>
-      <h1>My first webpage</h1>
-      <h3>Written with a little guidance from Moringa School</h3>
+    <h1>My first webpage</h1>
+    <h3>Written with a little guidance from Moringa School</h3>
 
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
+    
+    <p>Here are something I am going to learn about coding</p>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>And a lot more !</li>
+    </ol>
   </body>
 </html>
