Add unordered list

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -4,6 +4,11 @@
     <title>Favorite things</title>
 </head>
 <body>
+    <ul>
+        <li>Marion</li>
+        <li>Faith</li>
+        <li>Enosh</li>
+    </ul>
     
 </body>
 </html>
