Add ordered list

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -9,6 +9,11 @@
         <li>Faith</li>
         <li>Enosh</li>
     </ul>
+    <ol>
+        <li>pizza</li>
+        <li>french beans</li>
+        <li>burger</li>
+    </ol>
     
 </body>
 </html>
