--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -14,6 +14,10 @@
         <li>french beans</li>
         <li>burger</li>
     </ol>
+    <p>
+        My favorite songs are gospel worship. They are just soothing and always clear my head.
+        Table-tennis is my favorite sport though I rarely play it, I watch it a lot.
+    </p>
     
 </body>
 </html>
