--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -18,6 +18,7 @@
         My favorite songs are gospel worship. They are just soothing and always clear my head.
         Table-tennis is my favorite sport though I rarely play it, I watch it a lot.
     </p>
+    <p>Welcome to my<strong>first web page</strong>!</p>
     
 </body>
 </html>
