--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -17,5 +17,6 @@
         <li>JavaScript</li>
         <li>And a lot more !</li>
     </ol>
+    <p>Welcome to my <strong>first web page</strong>!</p>
   </body>
 </html>
