--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h3>Written with a little guidance from Moringa School</h3>
+    <h3>Written with a little guidance from <em>Moringa School</em></h3>
 
     <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
