--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -18,5 +18,6 @@
         <li>And a lot more !</li>
     </ol>
     <p>Welcome to my <strong>first web page</strong>!</p>
+    <p>Check out<a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
   </body>
 </html>
