Add block element

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -4,11 +4,13 @@
     <title>Favorite things</title>
 </head>
 <body>
+    <p>Here are my favorite friends.</p>
     <ul>
         <li>Marion</li>
         <li>Faith</li>
         <li>Enosh</li>
     </ul>
+    <p>Here are my favorite food</p>
     <ol>
         <li>pizza</li>
         <li>french beans</li>
