--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -19,5 +19,6 @@
     </ol>
     <p>Welcome to my <strong>first web page</strong>!</p>
     <p>Check out<a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+     <img src="images/elephant.jpeg" alt="A photo of an elephant">
   </body>
 </html>
