--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -13,6 +13,7 @@
     <p>Here are my favorite food</p>
     <ol>
         <li>pizza</li>
+        <img src="images/pizza.jpeg" alt="image of a pizza">
         <li>french beans</li>
         <li>burger</li>
     </ol>
