--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -9,6 +9,7 @@
         <li>Marion</li>
         <li>Faith</li>
         <li>Enosh</li>
+        <img src="images/friends.jpeg" alt="image of friends">
     </ul>
     <p>Here are my favorite food</p>
     <ol>
