--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Favorite things</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <p>Here are my favorite friends.</p>
